[backend] feat(chaining): generate n execution based on available inputs