@@ -14,7 +14,7 @@ import lombok.Setter;
 @AllArgsConstructor
 @Getter
 @Setter
-public class StepStateEntries {
+public class WorkflowStateEntries {
   /*Correlated path are separate by "+" */
   private final String regexPathCorrelated = "^.+\\+.+$";
 
@@ -69,7 +69,7 @@ public class StepStateEntries {
       } else if (inputsSameKey.size() > 1) {
         throw new RuntimeException("More than one input with same key: " + key);
       } else {
-        return inputsSameKey.get(0);
+        return inputsSameKey.getFirst();
       }
     }
   }
@@ -157,7 +157,7 @@ public class StepStateEntries {
     }
   }
 
-  private List<Map<String, String>> generateCombinations(List<Input> inputs, Correlated comp) {
+  public List<Map<String, String>> generateCombinations(List<Input> inputs, Correlated comp) {
     List<Map<String, String>> results = new ArrayList<>();
 
     // Get all sets of simple values
@@ -209,7 +209,7 @@ public class StepStateEntries {
    * @param lists a list of lists for which the Cartesian product will be correlated
    * @return a list of lists containing all possible combinations
    */
-  private <T> List<List<T>> cartesianProduct(List<List<T>> lists) {
+  public <T> List<List<T>> cartesianProduct(List<List<T>> lists) {
     List<List<T>> resultLists = new ArrayList<>();
     if (lists.isEmpty()) {
       resultLists.add(new ArrayList<>());
@@ -229,7 +229,7 @@ public class StepStateEntries {
     return resultLists;
   }
 
-  private long hashCombo(Map<String, String> combo) {
+  public long hashCombo(Map<String, String> combo) {
     // Order key
     StringBuilder sb = new StringBuilder();
     combo.forEach((k, v) -> sb.append(k).append("=").append(v).append("|"));
@@ -237,7 +237,8 @@ public class StepStateEntries {
     return Hashing.murmur3_128().hashString(sb.toString(), StandardCharsets.UTF_8).asLong();
   }
 
-  boolean comboContainAllExecutionKeys(Set<String> executionKeys, Map<String, String> combo) {
+  public boolean comboContainAllExecutionKeys(
+      Set<String> executionKeys, Map<String, String> combo) {
     return combo.keySet().containsAll(executionKeys);
   }
 }
